--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -5,36 +5,65 @@
     <div class="login-register" style="background-image:url(../assets/images/background/login-register.jpg);">
         <div class="login-box card">
             <div class="card-body">
-                <form class="form-horizontal form-material" id="loginform" action="index.html">
+                <form class="form-horizontal form-material" 
+                        id="loginform" 
+                        autocomplete="off"
+                        [formGroup]="registerForm"
+                        (ngSubmit)="crearUsuario()">
                     <h3 class="box-title m-b-20">Sign Up</h3>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <input class="form-control" type="text" required="" placeholder="Name">
+                            <input class="form-control" 
+                                    type="text" 
+                                    placeholder="Name"
+                                    formControlName="nombre">
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-xs-12">
-                            <input class="form-control" type="text" required="" placeholder="Email">
+                            <input class="form-control" 
+                            type="text" 
+                            placeholder="Email"
+                            formControlName="email">
                         </div>
                     </div>
                     <div class="form-group ">
                         <div class="col-xs-12">
-                            <input class="form-control" type="password" required="" placeholder="Password">
+                            <input class="form-control" 
+                            type="password"  
+                            placeholder="Password"
+                            formControlName="password">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-xs-12">
-                            <input class="form-control" type="password" required="" placeholder="Confirm Password">
+                            <input class="form-control" 
+                            type="password"  
+                            placeholder="Confirm Password"
+                            formControlName="password2">
                         </div>
                     </div>
                     <div class="form-group row">
                         <div class="col-md-12">
                             <div class="checkbox checkbox-success p-t-0">
-                                <input id="checkbox-signup" type="checkbox"  class="filled-in chk-col-light-blue">
+                                <input id="checkbox-signup" 
+                                type="checkbox"  
+                                class="filled-in chk-col-light-blue"
+                                formControlName="terminos">
                                 <label for="checkbox-signup"> I agree to all <a href="javascript:void(0)">Terms</a></label>
                             </div>
                         </div>
                     </div>
+
+                    <div class= "row">
+                        <div class="col text-danger">
+                            <p *ngIf="campoNoValido('nombre')">* El nombre es obligatorio</p>
+                            <p *ngIf="campoNoValido('email')">* El email es obligatorio y válido</p>
+                            <p *ngIf="contrasenasNoValidas()">* Las contraseñas deben ser iguales</p>
+                            <p *ngIf="aceptaTerminos()">* Debe de aceptar los terminos</p>
+                        </div>
+                    </div>
+
                     <div class="form-group text-center p-b-20">
                         <div class="col-xs-12">
                             <button class="btn btn-info btn-lg btn-block btn-rounded text-uppercase waves-effect waves-light" type="submit">Sign Up</button>
@@ -42,7 +71,7 @@
                     </div>
                     <div class="form-group m-b-0">
                         <div class="col-sm-12 text-center">
-                            Already have an account? <a href="pages-login.html" class="text-info m-l-5"><b>Sign In</b></a>
+                            Already have an account? <a routerLink="/login" class="text-info m-l-5"><b>Sign In</b></a>
                         </div>
                     </div>
                 </form>
