--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
             <ul id="sidebarnav">
                 <li class="user-profile">
                     <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><img
-                        [src]="usuario.imagenUrl" alt="user" /><span class="hide-menu">{{usuario.nombre}}
+                            [src]="usuario.imagenUrl" alt="user" /><span class="hide-menu">{{usuario.nombre}}
                         </span></a>
                     <ul aria-expanded="false" class="collapse">
                         <li><a routerLinkActive="active" routerLink="./perfil">My Profile </a></li>
@@ -22,18 +22,20 @@
                 <li class="nav-devider"></li>
                 <li class="nav-small-cap">PERSONAL</li>
 
-                <li *ngFor="let item of menuItems"> 
-                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i
-                            class="mdi mdi-gauge"></i><span class="hide-menu">
-                                {{item.titulo}}
-                                <span
-                                class="label label-rouded label-themecolor pull-right">
-                                {{item.submenu.length}}</span></span></a>
-                    <ul aria-expanded="false" class="collapse">
+                <li *ngFor="let item of menuItems">
+                    <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
+                        <i [class]="item.icono">
+                        </i><span class="hide-menu">
+                            {{item.titulo}}
+                            <span class="label label-rouded label-themecolor pull-right">
+                                {{item.submenu.length}}
+                            </span>
+                        </span></a>
+                    <ul aria-expanded="fase">
                         <li *ngFor="let subMenuItem of item.submenu">
-                            <a [routerLink]="subMenuItem.url"
-                            routerLinkActive="active"
-                            [routerLinkActiveOptions]="{ exact: true}">{{subMenuItem.titulo}} </a></li>
+                            <a [routerLink]="subMenuItem.url" routerLinkActive="active"
+                                [routerLinkActiveOptions]="{ exact: true}">{{subMenuItem.titulo}} </a>
+                        </li>
                     </ul>
                 </li>
 
